objects/wkitsm__ChangeManagementRule__c.object
<CustomObject>
    <description>Rule to be executed by the change management rule engine.</description>
    <fields>
        <fullName>wkitsm__Action__c</fullName>
        <description>The action that should be taken in the event of collision.</description>
        <inlineHelpText>The action that should be taken in the event of collision.</inlineHelpText>
        <label>Action</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warn</fullName>
                    <default>true</default>
                    <label>Warn</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__Icon__c</fullName>
        <defaultValue>&apos;utility:warning&apos;</defaultValue>
        <description>Label for the SLDS icon to be displayed when there is a violation. Icon labels can be found at: https://www.lightningdesignsystem.com/icons/</description>
        <inlineHelpText>Label for the SLDS icon to be displayed when there is a violation. Icon labels can be found at: https://www.lightningdesignsystem.com/icons/</inlineHelpText>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the rule is active.</description>
        <inlineHelpText>Whether or not the rule is active.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__MatchFieldValue__c</fullName>
        <description>Optional values used for match fields.</description>
        <inlineHelpText>Optional values used for match fields.</inlineHelpText>
        <label>Match Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__MatchField__c</fullName>
        <description>The API Name of the Case (Change) field to use for identifying similar cases.</description>
        <inlineHelpText>The API Name of the Case (Change) field to use for identifying similar cases.</inlineHelpText>
        <label>Match Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__MaxOverlappingChanges__c</fullName>
        <description>The maximum number of overlapping changes allowed by the rule.</description>
        <inlineHelpText>The maximum number of overlapping changes allowed by the rule.</inlineHelpText>
        <label>Max Overlapping Changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Change Management Rule</label>
    <listViews>
        <fullName>View_All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>View All</label>
    </listViews>
    <nameField>
        <label>Change Management Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Management Rules</pluralLabel>
    <recordTypes>
        <fullName>wkitsm__ChangeWindowRule</fullName>
        <active>true</active>
        <description>Rule for identifying changes that occur outside of defined change windows.</description>
        <label>Change Window Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__FieldMatchOverlapRule</fullName>
        <active>true</active>
        <description>Rule for identifying overlaps with other changes based on matching values of a field.</description>
        <label>Field Match Overlap Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__FreezeRule</fullName>
        <active>true</active>
        <description>Rule for capturing when a change is during a defined freeze period.</description>
        <label>Freeze Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__OverlapRule</fullName>
        <active>true</active>
        <description>Rule for identifying overlaps with other changes.</description>
        <label>Overlap Rule</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>